--- a/index.html
+++ b/index.html
@@ -142,31 +142,14 @@
 
         <!-- Contact Section -->
         <section id="contact" class="section">
-            <h2 class="text-4xl font-bold text-center mb-12">Get In Touch</h2>
-            <div class="max-w-xl mx-auto">
-                <div class="text-center mb-8">
-                    <p class="text-lg text-gray-400">Feel free to reach out to me at:</p>
-                    <a href="mailto:sushrutrimal@gmail.com" class="text-xl text-indigo-400 hover:text-indigo-300">sushrutrimal@gmail.com</a>
-                </div>
-                <form action="#" method="POST" class="space-y-6">
-                    <div>
-                        <label for="name" class="block text-sm font-medium text-gray-300">Name</label>
-                        <input type="text" name="name" id="name" class="mt-1 block w-full bg-gray-800 border border-gray-700 rounded-md py-2 px-3 text-white focus:outline-none focus:ring-indigo-500 focus:border-indigo-500">
-                    </div>
-                    <div>
-                        <label for="email" class="block text-sm font-medium text-gray-300">Email</label>
-                        <input type="email" name="email" id="email" class="mt-1 block w-full bg-gray-800 border border-gray-700 rounded-md py-2 px-3 text-white focus:outline-none focus:ring-indigo-500 focus:border-indigo-500">
-                    </div>
-                    <div>
-                        <label for="message" class="block text-sm font-medium text-gray-300">Message</label>
-                        <textarea name="message" id="message" rows="4" class="mt-1 block w-full bg-gray-800 border border-gray-700 rounded-md py-2 px-3 text-white focus:outline-none focus:ring-indigo-500 focus:border-indigo-500"></textarea>
-                    </div>
-                    <div class="text-center">
-                        <button type="submit" class="inline-flex justify-center py-3 px-6 border border-transparent shadow-sm text-base font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
-                            Send Message
-                        </button>
-                    </div>
-                </form>
+            <div class="text-center">
+                <h2 class="text-4xl font-bold text-center mb-6">Get In Touch</h2>
+                <p class="max-w-2xl mx-auto text-lg text-gray-400 mb-8">
+                    I'm always open to discussing new projects, creative ideas, or opportunities to be part of your visions. Feel free to reach out.
+                </p>
+                <a href="mailto:sushrutrimal@gmail.com" class="inline-block bg-indigo-600 text-white font-semibold py-3 px-8 rounded-lg hover:bg-indigo-700 transition duration-300 text-lg shadow-lg">
+                    Contact Me
+                </a>
             </div>
         </section>
     </div>
